Split ip_ecn code into its own module, so it can be shared between gif(4), stf(4), and ipsec(4).  Without this, loading the if_gif module can result in redefined global symbols if either ipsec(4) or stf(4) but not gif(4) is built into the kernel.

Fixes PR kern/52795 (as reported by martin@ via irc).

XXX pullup to netbsd-8